# pyqtgraph

./: .coveragerc  .flake8  .gitignore  .mailmap  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.txt  ColorButton.py  FIX_IMPLEMENTATION_SUMMARY.md  GradientWidget.py  GradientWidgetTest.py  GraphicsScene.py  GraphicsView.py  ImageView.py  ImageViewTemplate.py  ImageViewTemplate.ui  LICENSE.txt  MANIFEST.in  MultiPlotItem.py  MultiPlotWidget.py  ObjectWorkaround.py  PlotData.py  PlotItem.py  PlotWidget.py  Point.py  Qt.py  README  README.md  README.txt  SRTTransform.py  SRTTransform3D.py  SignalProxy.py  ThreadsafeTimer.py  (+45 more)
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
GraphicsScene/: GraphicsScene.py  __init__.py  exportDialog.py  exportDialogTemplate.py  exportDialogTemplate.ui  mouseEvents.py
QtNativeUtils/: QtNativeUtils.pro  build.sh  configure.py
benchmarks/: arrayToQPath.py  benchmarks.py  makeARGB.py  renderImageItem.py
binder/: apt.txt  environment.yml  requirements.txt  runtime.txt  start
canvas/: Canvas.py  CanvasItem.py  CanvasManager.py  CanvasTemplate.py  CanvasTemplate.ui  CanvasTemplate_pyside.py  TransformGuiTemplate.py  TransformGuiTemplate.ui  TransformGuiTemplate_pyside.py  __init__.py
console/: CmdInput.py  Console.py  __init__.py  template.py  template.ui
doc/: Makefile  README.txt  gen_files.py  listmissing.py  make.bat  overview_uml.graphml  requirements.txt  uml_overview.txt
dockarea/: Container.py  Dock.py  DockArea.py  DockDrop.py  __init__.py  __main__.py
examples/: Arrow.py  BarGraphItem.py  CLIexample.py  ColorBarItem.py  ColorButton.py  ColorGradientPlots.py  ConsoleWidget.py  CounterSlider.py  CrosshairLabel.py  CustomGraphItem.py  DataSlicing.py  DataTreeWidget.py  DateAxisItem.py  DateAxisItem_QtDesigner.py  DateAxisItem_attachToPlotItem.py  DateAxisItem_setAxisItems.py  DiffTreeWidget.py  Draw.py  ErrorBarItem.py  ExampleApp.py  FillBetweenItem.py  Flowchart.py  FlowchartCustomNode.py  GLBarGraphItem.py  GLGradientLegendItem.py  GLGraphItem.py  GLImageItem.py  GLIsosurface.py  GLLinePlotItem.py  GLMeshItem.py  GLPainterItem.py  GLScatterPlotItem.py  GLSurfacePlot.py  GLTextItem.py  GLViewWidget.py  GLVolumeItem.py  GLshaders.py  GradientEditor.py  GradientWidget.py  GraphItem.py  (+132 more)
exporters/: CSVExporter.py  Exporter.py  HDF5Exporter.py  ImageExporter.py  Matplotlib.py  PrintExporter.py  SVGExporter.py  __init__.py
flowchart/: Flowchart.py  FlowchartCtrlTemplate.py  FlowchartCtrlTemplate.ui  FlowchartTemplate.py  FlowchartTemplate_pyqt.py  Node.py  NodeLibrary.py  Terminal.py  __init__.py  eq.py
graphicsItems/: ArrowItem.py  AxisItem.py  ButtonItem.py  CurvePoint.py  ErrorBarItem.py  GradientEditorItem.py  GradientLegend.py  GraphItem.py  GraphicsItem.py  GraphicsItemMethods.py  GraphicsLayout.py  GraphicsObject.py  GraphicsWidget.py  GraphicsWidgetAnchor.py  GridItem.py  HistogramLUTItem.py  ImageItem.old  ImageItem.py  InfiniteLine.py  IsocurveItem.py  ItemGroup.py  LabelItem.py  LegendItem.py  LinearRegionItem.py  MultiPlotItem.py  PlotCurveItem.py  PlotDataItem.py  ROI.py  ScaleBar.py  ScatterPlotItem.py  TextItem.py  UIGraphicsItem.py  VTickGroup.py  ViewBox.pyc.renamed1
imageview/: ImageView.py  ImageViewTemplate.py  __init__.py
metaarray/: MetaArray.py  __init__.py
multiprocess/: __init__.py  bootstrap.py  parallelizer.py  processes.py  remoteproxy.py
opengl/: GLGraphicsItem.py  GLViewWidget.py  MeshData.py  __init__.py  glInfo.py  shaders.py
parametertree/: Parameter.py  ParameterItem.py  ParameterSystem.py  ParameterTree.py  SystemSolver.py  __init__.py  __main__.py  parameterTypes.py
pixmaps/: __init__.py  compile.py  pixmapData.py
pyqtgraph/: PlotData.py  Point.py  Qt.py  Qt.pyi  SRTTransform.py  SRTTransform3D.py  SignalProxy.py  ThreadsafeTimer.py  Transform3D.py  Vector.py  WidgetGroup.py  __init__.py  colorRegistry.py  colorbar_gradients.py  colormap.py  configfile.py  debug.py  exceptionHandling.py  frozenSupport.py  functions.py  functions_numba.py  functions_qimage.py  graphicsWindows.py  lru_cache.py  modded_PlotDataItem.py  namedBrush.py  namedColorManager.py  namedPen.py  numpy_fix.py  ordereddict.py  palette.py  pgcollections.py  plotDataMappings.py  ptime.py  python2_3.py  rebuildUi.py  reload.py  styleRegistry.py  units.py
pyqtgraph.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  __main__.py  conftest.py  functions.py  image_testing.py  makeARGB_test_data.py  svg.py  test.py  test_ImageFormat.py  test_Point.py  test_Vector.py  test_WidgetGroup.py  test_canvas_manager_crash.py  test_colormap.py  test_configparser.py  test_exit_crash.py  test_functions.py  test_makeARGB.py  test_pickles.py  test_qimage_writethru.py  test_qmenu_leak_workaround.py  test_qpainterpathprivate.py  test_qt.py  test_ref_cycles.py  test_reload.py  test_signalproxy.py  test_srttransform3d.py  test_stability.py  test_styleRegistry.py  ui_testing.py  uictest.ui  widgets.py
tests_pypy/: test_mixin.py  test_paramtree.py  test_qbytearray.py  test_qgraphicsobject.py  test_roi_handle_decay.py
(+1145 files in other folders)
