[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv*
    | _build
    | buck-out
    | build
    | dist
  )/

)
'''

[tool.isort]
profile = "black"
honor_noqa = true
color_output = true
py_version = 39
src_paths = ["pyqtgraph", "tests"]
skip_glob = ["**/*Template*.py", "**/colorama"]
skip_gitignore = true
known_third_party = ["QtCore", "QtGui", "QtWidgets"]

[tool.pycln]
all = true
exclude = '(Template|__init__.py)'

[tool.mypy]
packages = ["pyqtgraph"]
show_error_codes = true
strict = true
disable_error_code = ["attr-defined"]
ignore_errors = true

[[tool.mypy.overrides]]
module = "pyqtgraph.flowchart.*" # the list will increase
ignore_errors = true # will be changed to `false` when it's ready
